--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "familiada-halloween",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,13 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^8.1.3",
-    "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "@reduxjs/toolkit": "^2.5.0",
+    "next": "16.0.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
+  },
+  "devDependencies": {
+    "baseline-browser-mapping": "^2.8.32",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.5"
   }
 }
