--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "firebase": "^12.6.0",
     "next": "16.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
